# ai-factory

./: .env.example  .gitignore  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 255321f70aef_table_models_for_llm_rerank_embedding.py  68e680c2214c_add_new_field_dimension_for_embedding_.py  f197ccd7b7b2_create_ai_models_table.py
app/: main.py
app/api/: deps.py  errors.py
app/api/schemas/: __init__.py  ai_model.py  embed.py  llm.py  model.py  models.py
app/api/v1/: __init__.py  ai_models.py  chat.py  embed.py  embeddings.py  health.py  model.py
app/clients/: openrouter.py
app/core/: config.py  logging.py
app/database/: __init__.py  base.py  db.py
app/database/models/: __init__.py  ai_model.py  base.py  model.py
app/database/repositories/: repo.py
app/repositories/: __init__.py  model.py  model_repository.py
app/scripts/: __init__.py  populate_ai_models.py
app/services/: chat_service.py  embedding_service.py
app/services/ai/: __init__.py  base.py  embedded.py  llm.py
