[project]
name = "ai-factory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.18"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "sentence-transformers>=5.1.0",
    "torch",
    "uvicorn>=0.35.0",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
